# stag-bombator

./: .gitignore  Dockerfile  Kontrola-garantu-a-vyucujicich.R  Kontrola-garantu-a-vyucujicich.txt  README.md  compose.yml  getPredmetyByKatedraFullInfo-2023-03-15-17-40.csv  getRozvrhByKatedra-2023-03-15-17-47.xlsx  go.mod  go.work  go.work.sum  main.go  main.py  newPrototype.py  pyproject.toml  requirements.txt  stag_bombator.ipynb
kontroly/: ciselniky.ipynb  getPredmetyByKatedraFullInfo-2023-03-15-17-40.xlsx  getRozvrhByKatedra-2023-03-15-17-47.csv
results/: bez_garanta.xlsx  chybi_cvicici.xlsx  chybi_prednasejici.xlsx  chybi_seminarici.xlsx  cvicici_bez_cviceni.xlsx  garant_neprednasi.xlsx  konflikt_vyucujicich.xlsx  predmety_kde_garant_neuci.xlsx  prednasejici_bez_prednasek.xlsx  seminarici_bez_seminare.xlsx  vice_garantu.xlsx
streamlit/: fastapi.py  main.py  newPrototype.py  pyproject.toml  requirements.txt
templates/: main.templ  main_templ.go
