[tool.poetry]
name = "stag-kontroly-rozvrhu"
version = "0.1.0"
description = ""
authors = ["nexovec <hraccesky@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.28.1"
polars = {extras = ["all"], version = "^0.19.13"}
httpx = "^0.25.1"
streamlit-modal = "^0.1.0"
xlsx2csv = "^0.8.1"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
